@@ -83,6 +83,11 @@ class ExportPlugin(Base):
         'movies_title'          : True,
         'movies_year'           : True,
         'movies_notes'          : False,
+        'movies_screenplay'     : False,
+        'movies_cameraman'      : False,
+        'movies_width'          : False,
+        'movies_height'         : False,
+        'movies_barcode'        : False,
 #        'movies_region'         : False,
 #        'movies_layers'         : False,
 #        'movies_condition'      : False,
@@ -118,6 +123,11 @@ class ExportPlugin(Base):
         'movies_title'          : 'title',
         'movies_year'           : 'year',
         'movies_notes'          : 'notes',
+        'movies_screenplay'     : 'screenplay',
+        'movies_cameraman'      : 'cameraman',
+        'movies_width'          : 'width',
+        'movies_height'         : 'height',
+        'movies_barcode'        : 'barcode',
 #        'movies_region'         : 'region',
 #        'movies_layers'         : 'layers',
 #        'movies_condition'      : 'condition',
@@ -153,6 +163,11 @@ class ExportPlugin(Base):
         _('Title')          : 'movies_title',
         _('Year')           : 'movies_year',
         _('Notes')          : 'movies_notes',
+        _('Screenplay')     : 'movies_screenplay',
+        _('Cameraman')      : 'movies_cameraman',
+        _('Width')          : 'movies_width',
+        _('Height')         : 'movies_height',
+        _('Barcode')        : 'movies_barcode',
 #        _('Region')         : 'movies_region',
 #        _('Layers')         : 'movies_layers',
 #        _('Condition')      : 'movies_condition',
