@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2010  Vasco Nunes, Piotr Ożarowski
 
 
+2010-11-16  Michael Jahn
+	* added fields screenplay, cameraman, width, height and barcode to the html export plugin
+
 ---- 0.12.1 ----
 
 2010-10-18  Piotr Ożarowski
